# SwayFloatingSwitcher

./: .gitignore  README.md  meson.build  org.erikreider.sway-floating-switcher.json
data/: meson.build  org.erikreider.sway-floating-switcher.appdata.xml.in  org.erikreider.sway-floating-switcher.desktop.in  org.erikreider.sway-floating-switcher.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: client.vala  main.vala  meson.build  swayfloatingswitcher.gresource.xml
src/ApplicationItem/: application_item.ui  application_item.vala
src/Daemon/: daemon.vala
src/Node/: node.vala
src/SwayIPC/: swayipc.vala
src/Window/: window.ui  window.vala
